@@ -10,7 +10,7 @@
 * Improved the chat long line splitter to use ellipses
 * Missing keys in settings.ini will be added with the default value
 * Vote is now a command which works by Account
-* Fixed a BNetUser perspective bug
+* Fixed a BNetUser perspective bug affecting the ping command
 * ChatQueue: Unban requires ops
 * Fixed logic to decide which connection of a profile is the primary
 * Added relationships to the DB editor
@@ -18,6 +18,7 @@
 * ChatQueue will be cleared when changing channels
 * Never kick/ban without ops
 * Added kP BotNet support
+* Trivia is now a command
 
 2.0.5 (r1300) 2008-04-09:
 * Added a Cayenne persistence layer to address database problems
